[tool.poetry]
name = "socks-router"
version = "0.1.0"
description = "A thin layer of facade over ssh dynamic proxies with more sophisticated routing"
authors = ["Leo Sin <leo.sin@my.cityu.edu.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysocks = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "master"
upload_to_PyPI = false
upload_to_release = true
build_command = "poetry_build"
commit_author = "semantic-release[bot] <semantic-release-bot@semantic-release.org>"
