[tool.poetry]
name = "socks-router"
version = "0.0.2"
description = "A thin layer of facade over ssh dynamic proxies with more sophisticated routing"
authors = ["Leo Sin <leo.sin@my.cityu.edu.hk>"]
readme = "README.md"

[tool.poetry.scripts]
socks-router = "socks_router.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
pysocks = "^1.7.1"
prwlock = "^0.4.1"
sphinx = { version = "^7.2.6", optional = true }
sphinx-rtd-theme = { version = "^2.0.0", optional = true }
myst-parser = { version = "^2.0.0", optional = true }
sphinx-pyproject = { version = "^0.3.0", optional = true }
sphinxcontrib-apidoc = { version = "^0.5.0", optional = true }
sphinx-autoapi = { version = "^3.0.0", optional = true }
click = "^8.1.7"
more-itertools = "^10.2.0"
pyaml-env = "^1.2.1"
setuptools = "^70.0.0"
parsec = { git = "https://github.com/leoslf/parsec.py", branch = "master" } # "^3.17"
retry = "^0.9.2"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser", "sphinx-pyproject", "sphinxcontrib-apidoc", "sphinx-autoapi"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = ">=4.1,<6.0"
pytest-mock = "^3.12.0"
freezegun = "^1.4.0"
ruff = "^0.3.2"
mypy = { git = "https://github.com/python/mypy", branch = "master" }
junitparser = "^3.1.2"
pytest-describe = "^2.2.0"
mocket = "^3.12.8"
requests = { extras = ["socks"], version = "^2.32.3" }
pytest-mock-server = "^0.3.0"
pytest-env = "^1.1.3"
werkzeug = "2.0.0"
pre-commit = "^3.7.1"
pytest-httpserver = "^1.0.10"

[tool.poetry.group.release.dependencies]
python-semantic-release = "^9.1.1"

[tool.mypy]
install_types = true
ignore_missing_imports = true
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.ruff]
line-length = 132

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.sphinx-pyproject]
extensions = [
  "myst_parser",
  "sphinx.ext.autodoc",
  "autoapi.extension",
  "sphinx.ext.napoleon",
  "sphinx.ext.doctest",
  "sphinx.ext.intersphinx",
  "sphinx.ext.graphviz",
  "sphinx.ext.inheritance_diagram",
  "sphinx.ext.mathjax",
  "sphinx.ext.todo",
  "sphinx.ext.viewcode",
]
html_theme = "sphinx_rtd_theme"
add_function_parentheses = false
add_module_names = false
autoapi_generate_api_docs = true
autoapi_ignore = ["tests", "conf"]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "poetry build"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "perf",
  "style",
  "refactor",
  "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
